k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astro-playground
  namespace: default
  labels:
    app: astro-playground
spec:
  type: LoadBalancer
  selector:
    app: astro-playground
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
